// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
  onKeyDown={[Function]}
  onPointerDown={[Function]}
>
  <div
    className=""
  />
  <div
    className=""
  >
    <div
      className="ms-Slider-track"
      style={
        Object {
          "left": 0,
          "width": "50%",
        }
      }
    />
  </div>
  <div
    className=""
    style={
      Object {
        "transform": "translateX(50%)",
      }
    }
  >
    <div
      aria-valuemax={10}
      aria-valuemin={0}
      aria-valuenow={5}
      aria-valuetext="5"
      className="ms-Slider-thumb"
      role="slider"
      tabIndex={0}
    />
  </div>
  <div
    className=""
  />
</div>
`;

exports[`Slider renders Slider with origin correctly 1`] = `
Array [
  <div
    className=""
    id="slider-1"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "left": "20%",
            "width": "30%",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateX(50%)",
        }
      }
    >
      <div
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={5}
        aria-valuetext="5"
        className="ms-Slider-thumb"
        role="slider"
        tabIndex={0}
      />
    </div>
    <div
      className=""
    />
  </div>,
  <div
    className=""
    id="slider-2"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "height": "30%",
            "top": "20%",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateY(50%)",
        }
      }
    >
      <div
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={5}
        aria-valuetext="5"
        className="ms-Slider-thumb"
        role="slider"
        tabIndex={0}
      />
    </div>
    <div
      className=""
    />
  </div>,
]
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
  onKeyDown={[Function]}
  onPointerDown={[Function]}
>
  <div
    className=""
  />
  <div
    className=""
  >
    <div
      className="ms-Slider-track"
      style={
        Object {
          "height": "50%",
          "top": 0,
        }
      }
    />
  </div>
  <div
    className=""
    style={
      Object {
        "transform": "translateY(50%)",
      }
    }
  >
    <div
      aria-valuemax={10}
      aria-valuemin={0}
      aria-valuenow={5}
      aria-valuetext="5"
      className="ms-Slider-thumb"
      role="slider"
      tabIndex={0}
    />
  </div>
  <div
    className=""
  />
</div>
`;
